# page-diff

./: CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  start.bat
static/: index.html
